--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -33,6 +33,7 @@
     </div>
       <div
           class="card-container"
+          data-deck-id="{{deck_id}}"
           data-deck-name="{{deck}}"
           data-quiz-start="{{quiz.start_epoch}}"
           data-quiz-end="{{quiz.end_epoch}}"
