--- a/app/templates/quiz_result.html
+++ b/app/templates/quiz_result.html
@@ -125,7 +125,7 @@
           </div>
 
           <div class="container actions">
-            <a href="/deck/{{ deck }}" class="btn deck">
+            <a href="/deck/{{ deck_id }}" class="btn deck">
                 <span class="material-symbols-outlined">arrow_back</span>
                 <p>
                     {{ deck }}
