--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -111,6 +111,16 @@ footer {
   cursor: pointer;
 }
 
+.confirm-button-outlined {
+  border: 1px solid #00c676;
+  background-color: transparent;
+  color: #00c676;
+  border-radius: 0.5em;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 0.5em 1em;
+}
+
 .cancel-button {
   background-color: #ff6b6b;
   color: white;
@@ -122,6 +132,12 @@ footer {
 }
 
 input[type="text"] {
+  padding: 0.5em;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5em;
+}
+
+input[type="password"] {
   padding: 0.5em;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.5em;
@@ -262,7 +278,6 @@ input[type="submit"]:disabled {
     color: white;
 }
 
-.fade-out {
-    animation: fadeOut 0.5s ease-in-out;
+.p-0 {
+  padding: 0;
 }
-
