--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/css/404-style.css" />
   </head>
   <body>
+
     <header>
       <div class="container">
         <a id="logo" href="/">
@@ -30,6 +31,7 @@
         </nav>
       </div>
     </header>
+
     <main>
       <div class="container">
         <span
@@ -37,8 +39,8 @@
         >
           error_outline
         </span>
-        <h1>404 Not Found</h1>
-        <p>The page you are looking for does not exist.</p>
+        <h1>{{ error.title }}</h1>
+        <p>{{ error.message }}</p>
         <a href="/">Go back to the home page</a>
       </div>
     </main>
