--- a/app/templates/decks.html
+++ b/app/templates/decks.html
@@ -30,7 +30,7 @@
           <ul>
             {% if current_user.is_authenticated %}
             <li><a href="/deck">Decks</a></li>
-            <li><a href="/logout">Logout</a></li>
+            <li><button id="logout">Logout</button></li>
             {% else %}
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/login">Login</a></li>
@@ -237,5 +237,7 @@
 
     <script src="/static/js/decks.js"></script>
     <script src="/static/js/errorModal.js"></script>
+    <script src="/static/js/logout.js"></script>
+
   </body>
 </html>
