--- a/app/templates/quiz_result.html
+++ b/app/templates/quiz_result.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+
     <header>
       <div class="container">
         <a id="logo" href="/">
@@ -23,11 +24,19 @@
         </a>
         <nav>
           <ul>
+            {% if current_user.is_authenticated %}
+            <li><a href="/deck">Decks</a></li>
+            <button id="logout">Logout</button>
+            {% else %}
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/login">Login</a></li>
+            {% endif %}
             <li><a href="/help">Help</a></li>
           </ul>
         </nav>
       </div>
     </header>
+
 
     <div class="error-modal modal">
       {% with messages = get_flashed_messages() %} {% if messages %}
@@ -146,6 +155,7 @@
       <p>&copy; 2025 Recallr | All rights reserved</p>
     </footer>
     <script src="/static/js/errorModal.js"></script>
+    <script src="/static/js/logout.js"></script>
   </body>
 </html>
 
