--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -42,7 +42,21 @@ nav > ul {
   gap: 1em;
 }
 
+#logout {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+nav > ul > li {
+  text-decoration: none;
+}
+
 nav > ul > li > a {
+  text-decoration: none;
   color: white;
   font-weight: bold;
 }
@@ -216,7 +230,7 @@ input[type="password"] {
 }
 
 .icon-big {
-    font-size: 10em;
+  font-size: 10em;
 }
 
 .icon-green {
@@ -242,40 +256,39 @@ input[type="submit"]:disabled {
 }
 
 .error-modal {
-    display: none;
-    justify-content: center;
-    align-items: flex-end;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
+  display: none;
+  justify-content: center;
+  align-items: flex-end;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
 }
 
 .error-modal .flashes {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-
-    padding: 1em;
-    background-color: #ff6b6b;
-    color: white;
-    font-weight: bold;
-    width: 100%;
-    max-width: 800px;
-    border-radius: 0.5em 0.5em 0 0;
+  padding: 1em;
+  background-color: #ff6b6b;
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  max-width: 800px;
+  border-radius: 0.5em 0.5em 0 0;
 }
 
 .error-modal .flashes ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .error-modal .flashes button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    color: white;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: white;
 }
 
 .p-0 {
