--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -26,6 +26,13 @@
         </a>
         <nav>
           <ul>
+            {% if current_user.is_authenticated %}
+            <li><a href="/deck">Decks</a></li>
+            <button id="logout">Logout</button>
+            {% else %}
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/login">Login</a></li>
+            {% endif %}
             <li><a href="/help">Help</a></li>
           </ul>
         </nav>
@@ -48,5 +55,6 @@
     <footer>
       <p>&copy; 2025 Recallr | All rights reserved</p>
     </footer>
+    <script src="/static/js/logout.js"></script>
   </body>
 </html>
