fix(result): show results even if some cards are deleted

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -21,7 +21,7 @@
         </a>
         <nav>
           <ul>
-            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/help">Help</a></li>
             <li><a href="/login">Login</a></li>
           </ul>
         </nav>
