--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -37,11 +37,12 @@
           data-deck-name="{{deck}}"
           data-quiz-start="{{quiz.start_epoch}}"
           data-quiz-end="{{quiz.end_epoch}}"
-          data-quiz-id="{{quiz.quiz_id}}">
-        {% for card_id, card in quiz.cards.items() %}
+          data-quiz-id="{{quiz.quiz_id}}"
+        >
+        {% for quiz_card_id, card in quiz.cards.items() %}
         <div
           class="card"
-          data-card-id="{{ card_id }}"
+          data-quiz-card-id="{{quiz_card_id}}"
           style="
           z-index: {{ quiz.cards|length - loop.index }};
           top: calc({{ (loop.index) * 10 }}px + 50%);
