--- a/app/templates/deck.html
+++ b/app/templates/deck.html
@@ -268,9 +268,11 @@
             </div>
             <div class="card" data-flipped="false">
               <div class="question">
+                <p class="hint">Question</p>
                 <h3>{{ card.question }}</h3>
               </div>
               <div class="answer">
+                <p class="hint">Answer</p>
                 <h3>{{ card.answer }}</h3>
               </div>
             </div>
